--- a/app-dev.properties
+++ b/app-dev.properties
@@ -1,3 +1,3 @@
 app.service.workmode=api
 api.base-uri= https://mag-contacts-api.herokuapp.com
-file.path=src/main/resources/contacts.txt
+file.path=contacts.txt
